syntax = "proto3";

package userproto;

service UserService {
  rpc getUser (GetUserRequest) returns (UserResponse);
  rpc createUser (CreateUserRequest) returns (UserResponse);
}

message GetUserRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string name = 1;
}

message UserResponse {
  optional User data =1;
}

message User {
  int32 id = 1;
  string name = 2;
}